# radarsimlib

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  build_linux.sh  build_linux_cuda.sh  build_win.bat  build_win_cuda.bat
.github/workflows/: release_macos.yml  release_ubuntu.yml  release_windows.yml  release_windows_free.yml
examples/: README.md
examples/cpp/: CMakeLists.txt  README.md  build.bat  build.sh  example_radarsim.cpp
examples/python/: README.md  example_radarsim.py  requirements.txt
matlab/: radarsim.m
radarsimlib_linux_x86_64_cpu_free/: radarsim.h
radarsimlib_win_x86_64_gpu_free/: radarsim.h
src/: main.cpp  radar_config.cpp  radarsim.cpp  snapshot_config.cpp  target_config.cpp
src/includes/: radar_config.hpp  radarsim.h  snapshot_config.hpp  target_config.hpp
tests/: CMakeLists.txt  run_tests.bat  run_tests.sh  test_c_wrapper_basic.cpp  test_c_wrapper_error_handling.cpp  test_c_wrapper_radarsim.cpp  test_main.cpp  test_receiver.cpp  test_scene.cpp  test_simulator.cpp  test_targets.cpp  test_transmitter.cpp  test_version.cpp
